--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "play-server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "nodemon src/index.js"
   },
   "author": "hassaan",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "mongoose": "^8.13.2",
     "nodemon": "^3.1.9"
